Make #content non-flex and add a flex center div in base_portfolio.html to fix the main page alignment issue

--- a/home/static/home/css/base.css
+++ b/home/static/home/css/base.css
@@ -890,9 +890,6 @@ table#change-history tbody th {
 }
 
 #content {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
     padding: 20px 20px;
 }
 
